# rust-tcp-http

./: .env.example  .gitignore  2024-05-10-22-03-38-recv.md  Cargo.toml  README.md
cheatsheetz/: cheatsheet.txt  http-cheatsheet.sh  ssh-cheatsheet.txt
deployment/: DockerfileClient  DockerfileMysql  DockerfileNginx  DockerfileServer  deploy.sh  test-mysql.sh
deployment/helm-chart-base/: Chart.yaml
deployment/helm-chart-base/templates/: namespace.yaml
deployment/helm-chart-client/: Chart.yaml  client-deployment.yaml  values.yaml
deployment/helm-chart-client/templates/: client-deployment.yaml  client-env-configmap.yaml
deployment/helm-chart-mysql/: Chart.yaml  mysql-conf-configmap.yaml  mysql-deployment.yaml  mysql-pv.yaml  mysql-pvc.yaml  mysql-secret.yaml  mysql-svc.yaml  values.yaml
deployment/helm-chart-mysql/templates/: mysql-deployment.yaml  mysql-initdb-configmap.yaml  mysql-pvc.yaml  mysql-secret.yaml  mysql-svc.yaml
deployment/helm-chart-nginx/: Chart.yaml
deployment/helm-chart-nginx/templates/: nginx-certificate-secret.yaml  nginx-conf-configmap.yaml  nginx-deployment.yaml  nginx-htpasswd-configmap.yaml  nginx-svc.yaml
deployment/helm-chart-server/: Chart.yaml  server-deployment.yaml  server-svc.yaml  values.yaml
deployment/helm-chart-server/templates/: server-deployment.yaml  server-env-configmap.yaml  server-html-configmap.yaml  server-svc.yaml
deployment/nginx-config/: nginx.conf  proxy.conf  reverse-proxy.conf  ssl-params.conf
src/: encrypter.rs  main.rs  server.rs
